# group03052024

./: .env-example  .flake8  .pre-commit-config.yaml  Makefile  README.md  abstraction_oop.py  config.py  crypto_library.py  dao.py  database.py  db_2.py  decorators.py  jwt_example.py  main.py  oop_game.py  oop_game_constants.py  oop_theory.py  pyproject.toml  real_decorators.py  schemas.py  sql_theory.py  test_math_utils.py  test_validators.py  working_with_translation.py
.github/workflows/: testing-code.yml
api_router/: api_products.py  api_users.py  schemas_products.py  schemas_users.py
background_tasks/: confirm_registration.py
jhegrjg/: ddd.py
locale/en/LC_MESSAGES/: this_project.po
locale/it/LC_MESSAGES/: this_project.po
locale/ru/LC_MESSAGES/: this_project.po
locale/uk/LC_MESSAGES/: this_project.po
security/: security.py
templates/: 404.html  base.html  cart.html  create_product.html  details.html  index.html  login.html  navbar.html  registration.html  some_common_data.html  success_payment.html  welcome_letter.html
utils/: email_sender.py  jwt_auth.py  math_utils.py  utils_hashlib.py  validators.py
web_router/: web.py
